[package]
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
name = "learn-opengl-rs"
version = "0.6.1"

[dependencies]
cgmath = "0.14.1"
gl = "0.6.2"
glfw = "0.21.0"
image = "0.14.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.1.39"
rand = "0.3.15"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
    "chapter-4",
    "chapter-5",
    "chapter-6",
    "chapter-7"
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
