[package]
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
name = "learn-opengl-rs"
version = "0.6.2"

[dependencies]
cgmath = "0.17.0"
gl = "0.14.0"
glfw = "0.39.1"
image = "0.22.5"
# only needed from chapter 3 ondasda
tobj = "2.0.2"
num = "0.3.0"
rand = "0.7.3"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
    "chapter-4",
    "chapter-5",
    "chapter-6",
    "chapter-7"
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
